--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^1.7.2",
-    "compass": "^0.1.0",
-    "gulp": "^3.8.10",
+    "browser-sync": "^2.7.13",
+    "compass": "^0.1.1",
+    "gulp": "^3.9.0",
     "gulp-bower-files": "^0.2.7",
     "gulp-clean": "^0.3.1",
     "gulp-copy": "0.0.2",
-    "gulp-debug": "^2.0.0",
-    "gulp-ejs": "^1.0.0",
-    "gulp-flatten": "0.0.4",
+    "gulp-debug": "^2.0.1",
+    "gulp-ejs": "^1.1.0",
+    "gulp-flatten": "0.1.0",
     "gulp-ignore": "^1.2.1",
-    "gulp-imagemin": "^2.1.0",
-    "gulp-load-plugins": "^0.7.1",
-    "gulp-pleeease": "^1.0.4",
-    "gulp-plumber": "^0.6.6",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^1.1.0",
-    "gulp-sourcemaps": "^1.2.8",
-    "gulp-uglify": "^1.1.0",
-    "gulp-usemin": "^0.3.8",
-    "gulp-util": "^3.0.2",
-    "gulp.spritesmith": "^2.4.0",
-    "run-sequence": "^1.0.1"
+    "gulp-imagemin": "^2.3.0",
+    "gulp-load-plugins": "^1.0.0-rc",
+    "gulp-pleeease": "^1.2.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.3",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-usemin": "^0.3.11",
+    "gulp-util": "^3.0.6",
+    "gulp.spritesmith": "^3.8.2",
+    "run-sequence": "^1.1.1"
   }
 }
