--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-clean": "^0.3.1",
     "gulp-copy": "0.0.2",
     "gulp-debug": "^2.0.1",
+    "gulp-edit": "0.0.1",
     "gulp-ejs": "^1.1.0",
     "gulp-flatten": "0.1.0",
     "gulp-ignore": "^1.2.1",
