--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "^3.9.0",
     "gulp-bower-files": "^0.2.7",
     "gulp-clean": "^0.3.1",
+    "gulp-connect-php": "0.0.7",
     "gulp-copy": "0.0.2",
     "gulp-debug": "^2.0.1",
     "gulp-edit": "0.0.1",
@@ -26,6 +27,7 @@
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.3",
+    "gulp-sftp": "^0.1.5",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-usemin": "^0.3.11",
