--- a/package.json
+++ b/package.json
@@ -18,21 +18,22 @@
     "gulp-copy": "0.0.2",
     "gulp-debug": "^2.0.1",
     "gulp-edit": "0.0.1",
-    "gulp-ejs": "^1.1.0",
-    "gulp-flatten": "0.1.0",
-    "gulp-ignore": "^1.2.1",
+    "gulp-ejs": "^2.1.1",
+    "gulp-flatten": "0.2.0",
+    "gulp-ignore": "^2.0.1",
     "gulp-imagemin": "^2.3.0",
     "gulp-load-plugins": "^1.0.0-rc",
-    "gulp-pleeease": "^1.2.0",
+    "gulp-pleeease": "^2.0.2",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.3",
     "gulp-sftp": "^0.1.5",
-    "gulp-sourcemaps": "^1.5.2",
+    "gulp-sourcemaps": "^2.0.0-alpha",
     "gulp-uglify": "^1.2.0",
     "gulp-usemin": "^0.3.11",
     "gulp-util": "^3.0.6",
-    "gulp.spritesmith": "^3.8.2",
+    "gulp.spritesmith": "^6.2.1",
+    "main-bower-files": "^2.11.1",
     "run-sequence": "^1.1.1"
   }
 }
