--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,7 @@
     "jquery.smooth-scroll": "~1.5.4",
     "jquery.easing": "~1.3.1",
     "masonry": "~3.2.2",
-    "owlcarousel": "~1.3.2",
+    "owl.carousel": "^2.1.4",
     "dat.gui": "*",
     "stats.js": "*"
   }
